[gd_scene load_steps=4 format=3 uid="uid://7sgec55gmorl"]

[ext_resource type="Script" path="res://scripts/level_parts/releaser.gd" id="1_08i2d"]
[ext_resource type="PackedScene" uid="uid://yoa67ngsooi6" path="res://scenes/_/deleter.tscn" id="2_26hln"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p3xve"]
size = Vector2(176, 176)

[node name="0" type="Area2D"]
editor_description = "Костыль для разработки"
collision_layer = 8
collision_mask = 2
script = ExtResource("1_08i2d")

[node name="Shape" type="CollisionShape2D" parent="."]
z_index = 20
shape = SubResource("RectangleShape2D_p3xve")
debug_color = Color(0, 0, 0, 0)

[node name="UpDirection" type="Label" parent="."]
self_modulate = Color(0, 0, 0, 1)
z_index = 20
offset_left = -5.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 8.0
scale = Vector2(4, 4)
pivot_offset = Vector2(10.25, 11)
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Deleter" parent="UpDirection" instance=ExtResource("2_26hln")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
